ghetto/creative grid spacing fix. look at this later

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -283,6 +283,32 @@ ul#horizontal-list {
 
 }
 
+.space{
+  background-color: white !important;
+  color: white !important;
+}
+
+.clearfix:after {
+    content: ".";
+    display: block;
+    clear: both;
+    visibility: hidden;
+    line-height: 0;
+    height: 0;
+}
+ 
+.clearfix {
+    display: inline-block;
+}
+ 
+html[xmlns] .clearfix {
+    display: block;
+}
+ 
+* html .clearfix {
+    height: 1%;
+}
+
 .hoverin{
   background:black;
   opacity:.5;
